# telyclaw

./: .gitignore  CODE_SIGNING_GUIDE.md  MACOS_DISTRIBUTION.md  OPENCLAW.md  TAURI_SIGNING.md  package-lock.json  package.json  postcss.config.ts  tailwind.config.js  webpack.config.ts
.claude/: settings.local.json
docs/: mcp-manager-api.md  telegram-tool-call-flow.md
public/: statoscope-report.html
scripts/: build-signed.sh
src/components/left/main/: LeftSideMenuItems.tsx
src/components/main/: Main.scss  Main.tsx  OpenclawModal.scss  OpenclawModal.tsx
src/components/middle/: MiddleColumn.tsx
src/components/right/: OpenClawColumn.scss  OpenClawColumn.tsx
src/global/: initialState.ts
src/global/actions/ui/: misc.ts
src/global/types/: actions.ts  tabState.ts
src/openclaw/: AGENTS.md  README.md  README_zh.md
src/openclaw/docs/: architecture-openclaw-gui-cowork.md
src/openclaw/patches/: README.md
src/openclaw/scripts/: apply-openclaw-patches.cjs  build-openclaw-runtime.sh  bundle-openclaw-gateway.cjs  ensure-openclaw-plugins.cjs  ensure-openclaw-version.cjs  openclaw-runtime-host.cjs  precompile-openclaw-extensions.cjs  prune-openclaw-runtime.cjs  run-build-openclaw-runtime.cjs  sync-local-openclaw-extensions.cjs  sync-openclaw-runtime-current.cjs
src/openclaw/src/main/: coworkStore.ts  env.ts  logger.ts  skillManager.ts  skillServices.ts
src/openclaw/src/main/im/: http.ts  nimGateway.ts  (+2 more)
src/openclaw/src/renderer/: App.tsx  OpenclawAppWrapper.tsx  config.ts  index.css  main.tsx
src/openclaw/src/scheduledTask/: cronJobService.ts
src/util/tauri/: setupTauriListeners.ts  telegramDataBridge.ts  telegramTools.ts
tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
tauri/src/: lib.rs  tauri_compat_stubs.rs
tauri/src/openclaw/: db.rs  default_system_prompt.md  default_system_prompt.rs  mcp_bridge.rs  mcp_manager.rs  mod.rs  scheduled_tasks.rs
tauri/src/tray/: mod.rs
(+79 files in other folders)
