 [package]
name = "telegram_air"
version = "2.10.3"
description = "Telegram Air"
authors = ["Alexander Zinchuk"]
license = "GPLv3"
repository = "https://github.com/Ajaxy/telegram-tt"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22"
tauri = { version = "2.1.0", features = [ "devtools", "unstable", "config-json5", "tray-icon", "image-png"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-updater = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-fs = "2.0.0"
tauri-plugin-deep-link = "2.0.0"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
url = "2"
tauri-plugin-os = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-sql = { version = "2.0.0", features = ["sqlite"] }
# sqlx is used by tauri-plugin-sql
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = "0.4.44"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio-util = "0.7"
rfd = "0.15"
mime_guess = "2.0"
futures-util = "0.3"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2.4.0", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.1"
objc = "0.2.7"
rand = "0.10.0"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
